test/variables/sungeun/refvar-no-init-with-use.good
refvar-no-init-with-use.chpl:1: error: reference 'r' is not initialized
refvar-no-init-with-use.chpl:1: error: split initialization is not supported for globals
