test/variables/sungeun/refvar-no-init-with-use.chpl
ref r: int;
writeln(r);
